--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set version = "2.18.1" %}
 {% set estimator_version = "2.15.0" %}
-{% set build = 1 %}
+{% set build = 0 %}
 
 {% if cuda_compiler_version != "None" %}
 {% set build = build + 200 %}
@@ -344,7 +344,7 @@ outputs:
       string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
       string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
       # Note, estimators are deprecated: https://www.tensorflow.org/guide/migrate/migrating_estimator
-      skip: true  # [win]
+      skip: true
     requirements:
       build:
         - {{ compiler('c') }}
