--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,7 @@ source:
       - patches/0020-add-absl_prefetch-target.patch  # [not win]
       - patches/0021-add-absl_die_if_null-target.patch  # [not win]
       - patches/0022-add-absl_crc32c-targets.patch  # [not win]
+      - patches/0023-add-absl-tracing-target.patch  # [not win]
       - patches/0023-add-kernel_timeout_internal-target.patch  # [not win]
       - patches/0024-work-around-for-warning-that-clang-falsely-treats-as.patch  # [not win]
       - patches/0025-Hardcode-BUILD_PREFIX-in-build_pip_package.patch  # [not win]
@@ -47,7 +48,7 @@ source:
       - patches/0027-Protobuf-5-compatability.patch  # [not win]
       - patches/0028-Fix-ResolvePadding-to-be-consistent-in-the-size-of-t.patch
       - patches/0029-Avoid-linking-with-internal-nvrtc.patch
-      - patches/0030-remove-dependencies-to-libcuda.patch
+      - patches/0030-remove-dependencies-to-libcuda.patch   
       - patches/0031-loosen-hermetic-python.patch  # [not win]
       - patches/0032-win-fix-inline-perl.patch  # [win]
 
