--- a/abs.yaml
+++ b/abs.yaml
@@ -8,6 +8,7 @@ build_parameters:
 # build fails on ventura
 extra_labels_for_os:
   osx-arm64: [big-sur]
+  osx-64: [big-sur]
 
 channels:
   - https://staging.continuum.io/prefect/fs/tensorboard-feedstock/pr5/dfbecea
