--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,6 +52,7 @@ source:
       - patches/0031-loosen-hermetic-python.patch  # [not win]
       - patches/0032-win-fix-inline-perl.patch  # [win]
       - patches/0033-fix-osx-wheel-name.patch  # [osx]
+      - patches/0034-add-missing-argument-countdown.patch
 
 build:
   number: {{ build }}
