Fix invalid selectors.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,8 +31,8 @@ source:
       - patches/0011-Add-well_known_types_py_pb2-to-protobuf-systemlib.patch  # [not win]
       - patches/0012-Add-protobuf-toolchain.patch  # [not win]
       - patches/0013-fix-genproto.patch  # [not win]
-      - patches/0014-Remove-some-usage-of-absl-str_format-in-CUDA.patch  # [(cuda_compiler_version or "").startswith("11")]  # [not win]
-      - patches/0015-Adjust-relative-path-for-libdevice.patch  # [(cuda_compiler_version or "").startswith("12")]  # [not win]
+      - patches/0014-Remove-some-usage-of-absl-str_format-in-CUDA.patch  # [(cuda_compiler_version or "").startswith("11")]
+      - patches/0015-Adjust-relative-path-for-libdevice.patch  # [(cuda_compiler_version or "").startswith("12")]
       - patches/0016-Link-to-absl_log_flags-instead-of-absl_flags.patch  # [not win]
       - patches/0017-Update-ABSL-Log-Definition-for-libabsl_vlog_config_i.patch  # [not win]
       - patches/0018-add-absl_string_view-target.patch  # [not win]
