--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,8 +6,12 @@ cuda_compiler_version:
   - None                       
   - 12.4                       # [(linux and x86_64)]
 
+cudnn:                         # [(linux and x86_64)]
+  - '9.1.1.17'                 # [(linux and x86_64)]
+nccl:                          # [(linux and x86_64)]
+  - '2.21.5.1'                 # [(linux and x86_64)]
 cuda_compiler:                 # [(linux and x86_64)]
-- cuda-nvcc                    # [(linux and x86_64)]
+  - cuda-nvcc                  # [(linux and x86_64)]
 
 zip_keys:                      # [(linux and x86_64)]
   -                            # [(linux and x86_64)]
