--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -18,7 +18,18 @@ zip_keys:                      # [(linux and x86_64)]
     - gpu_variant              # [(linux and x86_64)]
     - cuda_compiler_version    # [(linux and x86_64)]
 
-c_compiler:                    # [win]
-  - vs2019                     # [win]
-cxx_compiler:                  # [win]
-  - vs2019                     # [win]
+skip_cuda_pbp:
+  - true
+
+OSX_SDK_VER:
+  - '12.3'
+
+c_compiler:                # [win]
+  - clang                  # [win]
+cxx_compiler:              # [win]
+  - clang                  # [win]
+
+c_compiler_version:        # [win]
+  - 17.0.6                 # [win]
+cxx_compiler_version:      # [win]
+  - 17.0.6                 # [win]
