--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.19.0" %}
+{% set version = "2.19.1" %}
 {% set build = 0 %}
 
 {% if cuda_compiler_version != "None" %}
@@ -16,21 +16,21 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
-    sha256: 4691b18e8c914cdf6759b80f1b3b7f3e17be41099607ed0143134f38836d058e
+    sha256: fcfb3e88ab3eebdbab98a03c869a4d2616d52ea166c8d8021de1ef921b47be8d
     patches:
       - patches/0001-loosen-requirements.patch
-      - patches/0002-Add-additional-absl_synchronization-linkage-to-gRPC.patch
+      # - patches/0002-Add-additional-absl_synchronization-linkage-to-gRPC.patch
       - patches/0003-Fix-missing-abseil-linkages.patch
-      - patches/0004-Fix-protobuf_python-for-systemlibs.patch  # [not win]
+      # - patches/0004-Fix-protobuf_python-for-systemlibs.patch  # [not win]
       - patches/0005-Add-absl_log-systemlib.patch  # [not win]
-      - patches/0006-Omit-linking-to-layout_proto_cc-if-protobuf-linkage-.patch  # [not win]
+      # - patches/0006-Omit-linking-to-layout_proto_cc-if-protobuf-linkage-.patch  # [not win]
       - patches/0007-Fix-further-abseil-linkage.patch  # [not win]
       - patches/0008-Add-constraint-to-pybind11-systemlib.patch  # [not win]
       - patches/0009-Different-file-ending-for-flatbuffers-LICENSE.patch  # [not win]
       - patches/0010-Use-correct-hermetic-python.patch  # [not win]
-      - patches/0011-Add-well_known_types_py_pb2-to-protobuf-systemlib.patch  # [not win]
-      - patches/0012-Add-protobuf-toolchain.patch  # [not win]
-      - patches/0013-fix-genproto.patch  # [not win]
+      # - patches/0011-Add-well_known_types_py_pb2-to-protobuf-systemlib.patch  # [not win]
+      # - patches/0012-Add-protobuf-toolchain.patch  # [not win]
+      # - patches/0013-fix-genproto.patch  # [not win]
       - patches/0014-Remove-some-usage-of-absl-str_format-in-CUDA.patch  # [(cuda_compiler_version or "").startswith("11")]
       - patches/0015-Adjust-relative-path-for-libdevice.patch  # [(cuda_compiler_version or "").startswith("12")]
       - patches/0016-Link-to-absl_log_flags-instead-of-absl_flags.patch  # [not win]
@@ -46,22 +46,26 @@ source:
       - patches/0026-Hardcode-BUILD_PREFIX-in-build_pip_package.patch  # [not win]
       - patches/0027-Only-link-to-sparse_core_layout_proto_cc-headers.patch  # [not win]
       # Note that this patch generates two patches in the third_party directory. Which then get applied via bazel.
-      - patches/0028-Protobuf-5-compatability.patch  # [not win]
-      - patches/0029-Fix-ResolvePadding-to-be-consistent-in-the-size-of-t.patch
-      - patches/0030-Avoid-linking-with-internal-nvrtc.patch
-      - patches/0031-remove-dependencies-to-libcuda.patch   
-      - patches/0032-loosen-hermetic-python.patch  # [not win]
-      - patches/0033-win-fix-inline-perl.patch  # [win]
+      # - patches/0028-Protobuf-5-compatability.patch  # [not win]
+      - patches/0029-Avoid-linking-with-internal-nvrtc.patch  
+      - patches/0030-remove-dependencies-to-libcuda.patch   
+      - patches/0031-loosen-hermetic-python.patch  # [not win]
+      - patches/0032-win-fix-inline-perl.patch  # [win]
+      - patches/0033-fix-osx-wheel-name.patch  # [osx and arm64]
+      - patches/0034-add-missing-argument-countdown.patch
+      - patches/0035-remove-ambiguous-defaultquantparamspass-constructor.patch  # [linux]
+      - patches/0036-fix-win-binary-quirk.patch  # [win]
 build:
   number: {{ build }}
   skip: true  # [python_impl == 'pypy']
   # https://www.tensorflow.org/install/source#tested_build_configurations
   skip: true  # [py<39 or py>312]
-  skip: true  # [skip_cuda_prefect and (gpu_variant or "").startswith('cuda')]
+  skip: true  # [skip_cuda_pbp and (gpu_variant or "").startswith('cuda')]
 
 requirements:
   build:
-    - perl                                   # [not osx]
+    - perl                                   # [linux]
+    - m2-perl                                # [win]
     - python                                 # [build_platform != target_platform]
     - cython                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
@@ -76,17 +80,14 @@ requirements:
     - onednn-cpu-threadpool                  # [build_platform != target_platform]
     - pybind11 2                             # [build_platform != target_platform]
     - numpy {{ numpy }}                      # [build_platform != target_platform]
+    - {{ stdlib('c') }}
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-    - clang    # [win]
-    - llvmdev  # [win]
-    - lld      # [win]
     - bazel 6.*
     # v0.2.0b1 contains patchelf support, see https://github.com/AnacondaRecipes/bazel-toolchain-feedstock/pull/3
     - bazel-toolchain >=0.2.0b1  # [not win]
     - libgrpc {{ libgrpc }}
-    - libprotobuf {{ libprotobuf }}
     - nasm 2.14                              # [x86_64]
     - patchelf   # [unix]
     - sed        # [unix]
@@ -142,12 +143,10 @@ requirements:
     - dill
     - giflib {{ giflib }}
     - libgrpc {{ libgrpc }}
-    - flatbuffers
+    - flatbuffers 24.3.25
     - icu {{ icu }}
     - jpeg {{ jpeg }}
     - libpng {{ libpng }}
-    - libprotobuf {{ libprotobuf }}
-    - libprotobuf-python-headers {{ libprotobuf }}
     - openssl {{ openssl }}
     - pybind11 2
     - sqlite {{ sqlite }}
@@ -171,9 +170,7 @@ outputs:
       track_features:
         - tensorflow-cpu          # [cuda_compiler_version == "None"]
       entry_points:
-        - toco_from_protos = tensorflow.lite.toco.python.toco_from_protos:main
         - tflite_convert = tensorflow.lite.python.tflite_convert:main
-        - toco = tensorflow.lite.python.tflite_convert:main
         - saved_model_cli = tensorflow.python.tools.saved_model_cli:main
         # The tensorboard package adds this entry point.
         # - tensorboard = tensorboard.main:run_main
@@ -187,12 +184,10 @@ outputs:
     requirements:
       # build requirements needs to pick up the compiler run_exports
       build:
+        - {{ stdlib('c') }}
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
         - {{ compiler('cuda') }}              # [cuda_compiler_version != "None"]
-        - clang    # [win]
-        - llvmdev  # [win]
-        - lld      # [win]
         - python                              # [build_platform != target_platform]
         - cross-python_{{ target_platform }}  # [build_platform != target_platform]
       host:
@@ -225,13 +220,11 @@ outputs:
         - dill
         - giflib {{ giflib }}
         - libgrpc {{ libgrpc }}
-        - flatbuffers
+        - flatbuffers 24.3.25
         - icu {{ icu }}
         - jpeg {{ jpeg }}
         - libcurl {{ libcurl }}
         - libpng {{ libpng }}
-        - libprotobuf {{ libprotobuf }}
-        - libprotobuf-python-headers {{ libprotobuf }}
         - openssl {{ openssl }}
         - pybind11 2
         # snappy needs rtti enabled, this version of ours has it
@@ -249,8 +242,7 @@ outputs:
         - ml_dtypes >={{ ml_dtypes_version }},<1.0.0
         - numpy {{ numpy }}
         - opt_einsum >=2.3.2
-        - protobuf >=3.20.3,<6,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
-        - python-flatbuffers >=24.3.25
+        # - protobuf >=3.20.3,<6,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
         - requests >=2.21.0,<3
         - six >=1.12
         - termcolor >=1.1.0
@@ -262,6 +254,7 @@ outputs:
       run:
         - python
         - packaging
+        - {{ pin_subpackage('tensorflow-protobuf-headers', exact=True) }}
         - absl-py >=1.0.0
         - astunparse >=1.6.0
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
@@ -269,9 +262,9 @@ outputs:
         - grpcio {{ libgrpc }}.*
         - h5py >=3.11
         - ml_dtypes >={{ ml_dtypes_version }},<1.0.0
-        - numpy >=1.26.0,<2.3.0
+        - numpy >=1.26.0,<2.2.0
         - opt_einsum >=2.3.2
-        - protobuf >=3.20.3,<6,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
+        # - protobuf >=3.20.3,<6,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
         - python-flatbuffers >=24.3.25
         - requests >=2.21.0,<3
         - six >=1.12
@@ -333,8 +326,6 @@ outputs:
         # --help exits with exit code 1
         - test -x $PREFIX/bin/saved_model_cli  # [unix]
         - tflite_convert --help      # [build_platform == target_platform]
-        - toco_from_protos --help    # [build_platform == target_platform]
-        - toco --help                # [build_platform == target_platform]
         - python -c "import tensorflow as tf; assert tf.test.is_built_with_cuda()"      # [cuda_compiler_version != "None"]
         - python -c "import tensorflow as tf; assert not tf.test.is_built_with_cuda()"  # [cuda_compiler_version == "None"]
         # See https://github.com/conda-forge/tensorflow-feedstock/issues/364
@@ -352,6 +343,7 @@ outputs:
     requirements:
       # build requirements needs to pick up the compiler run_exports
       build:
+        - {{ stdlib('c') }}
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
         # Keep the cuda compiler here since it helps package solvers
@@ -367,7 +359,6 @@ outputs:
         - jpeg {{ jpeg }}
         - libcurl {{ libcurl }}
         - libpng {{ libpng }}
-        - libprotobuf {{ libprotobuf }}
         - openssl {{ openssl }}
         # snappy needs rtti enabled, this version of ours has it
         - snappy 1.2.1
@@ -399,6 +390,7 @@ outputs:
     requirements:
       # build requirements needs to pick up the compiler run_exports
       build:
+        - {{ stdlib('c') }}
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
         # Keep the cuda compiler here since it helps package solvers
@@ -407,7 +399,7 @@ outputs:
         - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
       # host requirements to pick up run_exports
       host:
-        - flatbuffers
+        - flatbuffers 24.3.25
         - giflib {{ giflib }}
         - icu {{ icu }}
         - libabseil {{ libabseil }}
@@ -415,7 +407,6 @@ outputs:
         - libgrpc {{ libgrpc }}
         - jpeg {{ jpeg }}
         - libpng {{ libpng }}
-        - libprotobuf {{ libprotobuf }}
         - openssl {{ openssl }}
         # snappy needs rtti enabled, this version of ours has it
         - snappy 1.2.1
@@ -423,6 +414,7 @@ outputs:
         - zlib {{ zlib }}
         - nccl 2.21.5.1      # [cuda_compiler_version != "None"]
       run:
+        - {{ pin_subpackage('tensorflow-protobuf-headers', exact=True) }}
         - libml_dtypes-headers >={{ libml_dtypes_version }},<0.6
         # avoid that people without GPUs needlessly download ~200-300MB
         - __cuda  # [cuda_compiler_version != "None"]
@@ -435,6 +427,24 @@ outputs:
       commands:
         - test -f $PREFIX/lib/libtensorflow_cc${SHLIB_EXT}  # [not win and cuda_compiler_version == "None"]
         - ./test_libtensorflow_cc.sh                        # [not win and cuda_compiler_version == "None" and build_platform == target_platform]
+
+  - name: tensorflow-protobuf-headers
+    script: cp_tensorflow_vendored_protobuf.sh   # [unix]
+    script: cp_tensorflow_vendored_protobuf.bat  # [win]
+    requirements:
+      build:
+        - python                                 # [build_platform != target_platform]
+        - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+      host:
+        - python
+        - pip
+      run:
+        - python
+    test:
+      commands:
+        # Test that the protobuf headers are installed in SP_DIR/include/google
+        - test -d $SP_DIR/tensorflow/include/google                    # [not win]
+        - if not exist %SP_DIR%\tensorflow\include\google exit 1       # [win]
 
   # 2021/08/01, hmaarrfk
   # While this seems like a roundabout way of defining the package name
