--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -21,8 +21,8 @@ zip_keys:                      # [(linux and x86_64)]
 skip_cuda_pbp:
   - true
 
-OSX_SDK_VER:
-  - '12.3'
+OSX_SDK_VER:               # [osx]
+  - 12.3                   # [osx]
 
 c_compiler:                # [win]
   - clang                  # [win]
