--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -236,7 +236,8 @@ outputs:
         # github.com/tensorflow/tensorflow/blob/v{{ version }}/tensorflow/tools/pip_package/setup.py
         - absl-py >=1.0.0
         - astunparse >=1.6.0
-        - python-flatbuffers >=24.3.25
+        # Upstream sepcifies >=24.3.25, but the source is riddled with asserts for ==24.3.25
+        - python-flatbuffers 24.3.25
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
         - google-pasta >=0.1.1
         - h5py >=3.11
@@ -265,7 +266,7 @@ outputs:
         - numpy >=1.26.0,<2.2.0
         - opt_einsum >=2.3.2
         # - protobuf >=3.20.3,<6,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
-        - python-flatbuffers >=24.3.25
+        - python-flatbuffers 24.3.25
         - requests >=2.21.0,<3
         - six >=1.12
         - termcolor >=1.1.0
