--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -57,13 +57,13 @@ build:
   number: {{ build }}
   skip: true  # [python_impl == 'pypy']
   # https://www.tensorflow.org/install/source#tested_build_configurations
-  skip: true  # [py<39 or py>313]
+  skip: true  # [py<310 or py>313]
   skip: true  # [skip_cuda_pbp and (gpu_variant or "").startswith('cuda')]
 
 requirements:
   build:
     - perl                                   # [linux]
-    - m2-perl                                # [win]
+    - msys2-perl                             # [win]
     - python                                 # [build_platform != target_platform]
     - cython                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
@@ -92,8 +92,6 @@ requirements:
     # realpath is not available from the docker image for cuda <= 10.2
     # so we install coreutils here
     - coreutils  # [cuda_compiler_version != "None"]
-    - patch      # [unix]
-    - m2-patch   # [win]
     - rsync      # [unix]
     - sqlite     # [win]
   host:
@@ -124,8 +122,8 @@ requirements:
     - curl {{ libcurl }}        # [win]
     - unzip 6.0    # [not win]
     - zip   3.0    # [not win]
-    - m2-unzip     # [win]
-    - m2-zip       # [win]
+    - msys2-unzip     # [win]
+    - msys2-zip       # [win]
     - openjdk >=8
     - nsync 1.24
     # TF_SYSTEM_LIBS, see usage in
