--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -30,11 +30,9 @@ cxx_compiler:              # [win]
   - clang                  # [win]
 
 c_compiler_version:        # [win]
-  - 17.0.6                 # [win]
+  - 20                     # [win]
 cxx_compiler_version:      # [win]
-  - 17.0.6                 # [win]
+  - 20                     # [win]
 
-c_compiler_version:        # [osx]
-  - 19                     # [osx]
-cxx_compiler_version:      # [osx]
-  - 19                     # [osx]
+# TODO This should be in abs.yaml. Testing if this works for now. 
+task_timeout: 54000
