--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -174,6 +174,7 @@ outputs:
         - tf_upgrade_v2 = tensorflow.tools.compatibility.tf_upgrade_v2_main:main
       missing_dso_whitelist:
         - "**/_pywrap_tensorflow_internal.*" # loaded by python wrapper pywrap_tensorflow.py
+        - "**/_pywrap_tensorflow_common.*"
         # some .sos look for other .sos in different site-packages directories. Root cause is probably
         # similar to with pytorch, that it loads libraries manually in the python code (TBC)
         - "**/libtensorflow_framework.so.2"
