--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,9 +40,9 @@ source:
       - patches/0020-is_signed-cannot-be-specialized.patch
       # Abseil un-vendoring
       - patches/0021-consolidated-abseil-unvendoring.patch  # [not win]
-      # - patches/23.patch  # [not win]
       # gRPC un-vendoring
       - patches/0022-gprc-systemlib-repair.patch  # [not win]
+      - patches/0023-fix-ambiguous-NoDestructor.patch  # [linux]
 
 build:
   number: {{ build }}
