--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,7 @@ source:
       - patches/0023-gprc-systemlib-repair.patch  # [not win]
       - patches/0024-fix-ambiguous-NoDestructor.patch  # [linux]
       - patches/0025-add-missing-namespace.patch  # [linux]
+      - patches/0026-link-snappy.patch  # [linux]
 
 build:
   number: {{ build }}
