Try using latest abseil.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -128,7 +128,7 @@ requirements:
     # but so far there have been no problems with leaving these
     # unpinned; though some restrictions come in for packages
     # that are also listed as a requirement for the pip_package.
-    - libabseil 20250127.1
+    - libabseil {{ libabseil }}
     - astor
     - cython
     - dill
@@ -207,7 +207,7 @@ outputs:
         - packaging
         - wheel
         # TF_SYSTEM_LIBS
-        - libabseil 20250127.1
+        - libabseil {{ libabseil }}
         - astor
         - cython
         - dill
