--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -14,15 +14,16 @@ zip_keys:                      # [(linux and x86_64)]
 skip_cuda_pbp:
   - true
 
-OSX_SDK_VER:               # [osx]
-  - 12.3                   # [osx]
+OSX_SDK_VER:  # [osx]
+  - 12.3      # [osx]
 
-c_compiler:                # [win]
-  - clang                  # [win]
-cxx_compiler:              # [win]
-  - clang                  # [win]
+c_compiler:
+  - clang
+cxx_compiler:
+  - clangxx  # [unix]
+  - clang    # [win]
 
-c_compiler_version:        # [win]
-  - 20                     # [win]
-cxx_compiler_version:      # [win]
-  - 20                     # [win]
+c_compiler_version:
+  - 20
+cxx_compiler_version:
+  - 20
